fix the index out of array bug, initialize the commit index